--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,7 +10,7 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/leiyx"
+url = "https://github.com/CaiJimmy/hugo-theme-stack"
 
 [social.params]
 icon = "brand-github"
