--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -10,15 +10,15 @@
 [[social]]
 identifier = "github"
 name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+url = "https://github.com/leiyx"
 
 [social.params]
 icon = "brand-github"
 
 [[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
+identifier = "wechat"
+name = "wechat"
+url = "../wechat.html"
 
 [social.params]
-icon = "brand-twitter"
+icon = "weixin"
