--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -18,7 +18,7 @@ icon = "brand-github"
 [[social]]
 identifier = "wechat"
 name = "wechat"
-url = "../wechat.html"
+url = "https://www.leiyx.top/wechat.html"
 
 [social.params]
 icon = "weixin"
